Download_path and Cache added

--- a/Data-Retrieval-Integration.ipynb
+++ b/Data-Retrieval-Integration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 150,
    "id": "86a5edbc-5e1c-49de-9c20-3d780a58a6af",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "from io import BytesIO\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "DOWNLOAD_DIR = 'fuelcheck_monthly_files'"
    ]
   },
   {
@@ -33,15 +34,10 @@
     "#Retrieve Data\n",
     "\n",
     "def retrieve_fuelcheck_monthly_data():\n",
-    "    print(\"Retrieving NSW FuelCheck monthly data from Jan 2024 – Mar 2025\")\n",
+    "    print(\"Retrieving NSW FuelCheck monthly data from Jan 2024 – Mar 2025...\")\n",
     "\n",
     "    base_url = \"https://data.nsw.gov.au/data/dataset/fuel-check\"\n",
     "    html_response = requests.get(base_url)\n",
-    "\n",
-    "    if(html_response.status_code != 200):\n",
-    "        print(\"Failed to access page:\", html_response.status_code)\n",
-    "        return pd.DataFrame()\n",
-    "    \n",
     "    soup = BeautifulSoup(html_response.text, \"html.parser\")\n",
     "\n",
     "    allowed_extensions = ['.xlsx', '.xls', '.csv']\n",
@@ -50,36 +46,52 @@
     "    short_months = ['jan', 'feb', 'mar', 'apr', 'may', 'jun',\n",
     "                    'jul', 'aug', 'sep', 'oct', 'nov', 'dec']\n",
     "\n",
-    "    target_patterns = [m + \"2024\" for m in long_months + short_months]\n",
-    "    target_patterns += [m + \"2025\" for m in long_months[:3] + short_months[:3]]\n",
-    "    target_patterns += [m + \"25\" for m in long_months[:3] + short_months[:3]]\n",
+    "    target_patterns = [m + \"2024\" for m in long_months] + [m + \"2024\" for m in short_months]\n",
+    "    target_patterns += [m + \"2025\" for m in long_months[:3]] + [m + \"2025\" for m in short_months[:3]]\n",
+    "    target_patterns += [m + \"25\" for m in long_months[:3]] + [m + \"25\" for m in short_months[:3]]\n",
     "\n",
     "    download_links = []\n",
-    "    for tag in soup.select(\"a[href$='.xls'], a[href$='.xlsx'], a[href$='.csv']\"):\n",
+    "    for tag in soup.find_all(\"a\", href=True):\n",
     "        href = tag['href'].lower()\n",
-    "        clean_href = href.replace('-', '').replace('_', '')\n",
-    "        if any(pattern in clean_href for pattern in target_patterns):\n",
-    "            download_links.append(tag['href'])\n",
+    "        if any(href.endswith(ext) for ext in allowed_extensions):\n",
+    "            clean_href = href.replace('-', '').replace('_', '')\n",
+    "            if any(pattern in clean_href for pattern in target_patterns):\n",
+    "                download_links.append(tag['href'])\n",
     "\n",
     "    print(f\"Found {len(download_links)} monthly files.\")\n",
     "\n",
     "    monthly_dataframes = []\n",
     "    for file_link in download_links:\n",
-    "        try:\n",
-    "            print(f\"Downloading: {file_link}\")\n",
-    "            response = requests.get(file_link)\n",
-    "            if(file_link.endswith(('.xls', '.xlsx'))):\n",
-    "                df_month = pd.read_excel(BytesIO(response.content))\n",
-    "            elif(file_link.endswith('.csv')):\n",
-    "                df_month = pd.read_csv(BytesIO(response.content))\n",
-    "            else:\n",
-    "                continue\n",
-    "            df_month['source_file'] = file_link\n",
-    "            monthly_dataframes.append(df_month)\n",
-    "        except Exception as e:\n",
-    "            print(f\"Failed to load {file_link}: {e}\")\n",
+    "        filename = file_link.split('/')[-1]  # Extract file name from URL\n",
+    "        local_path = os.path.join(DOWNLOAD_DIR, filename)\n",
     "\n",
-    "    if(monthly_dataframes):\n",
+    "        if os.path.exists(local_path):\n",
+    "            print(f\"Using cached file: {local_path}\")\n",
+    "            if filename.endswith(('.xls', '.xlsx')):\n",
+    "                df_month = pd.read_excel(local_path)\n",
+    "            elif filename.endswith('.csv'):\n",
+    "                df_month = pd.read_csv(local_path)\n",
+    "        else:\n",
+    "            try:\n",
+    "                print(f\"Downloading: {file_link}\")\n",
+    "                response = requests.get(file_link)\n",
+    "                with open(local_path, 'wb') as f:\n",
+    "                    f.write(response.content)\n",
+    "\n",
+    "                if filename.endswith(('.xls', '.xlsx')):\n",
+    "                    df_month = pd.read_excel(local_path)\n",
+    "                elif filename.endswith('.csv'):\n",
+    "                    df_month = pd.read_csv(local_path)\n",
+    "                else:\n",
+    "                    continue\n",
+    "            except Exception as e:\n",
+    "                print(f\"Failed to load {file_link}: {e}\")\n",
+    "                continue\n",
+    "\n",
+    "        df_month['source_file'] = file_link\n",
+    "        monthly_dataframes.append(df_month)\n",
+    "\n",
+    "    if monthly_dataframes:\n",
     "        combined_df = pd.concat(monthly_dataframes, ignore_index=True)\n",
     "        print(f\"Combined dataset shape: {combined_df.shape}\")\n",
     "        return combined_df\n",
@@ -90,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 155,
    "id": "eeafd2f0-dda1-467f-a8cf-5bcffe360681",
    "metadata": {},
    "outputs": [],
@@ -125,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "id": "9900566e",
    "metadata": {},
    "outputs": [],
@@ -282,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 160,
    "id": "4bde6afc",
    "metadata": {},
    "outputs": [],
@@ -296,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 162,
    "id": "ee073c8e-d3aa-4a8b-948d-033df3bfbf26",
    "metadata": {},
    "outputs": [
@@ -304,24 +316,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieving NSW FuelCheck monthly data from Jan 2024 – Mar 2025\n",
+      "Retrieving NSW FuelCheck monthly data from Jan 2024 – Mar 2025...\n",
       "Found 15 monthly files.\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/2d785043-38eb-4eeb-b992-89f1af8d91e1/download/fuelcheck_pricehistory_jan2024.xlsx\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/404dcdf6-bbde-4ccf-869e-259bcc408ce5/download/fuelcheck_pricehistory_feb2024.xlsx\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/8c461685-3ed2-47e0-b9e6-9737c58a21bf/download/fuelcheck_pricehistory_mar2024.xlsx\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/56a4fdb5-0789-4a2f-a89f-18e0159e210f/download/fuelcheck_pricehistory_apr2024.xlsx\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/f70eb8e4-7291-47c8-874c-daea7eda0df1/download/fuelcheck_pricehistory_may2024.xlsx\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/7c6e7325-95ff-409e-becf-ffb45ad5271b/download/fuelcheck_pricehistory_jun2024.xlsx\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/8fd1a016-6156-417e-8a15-339467e4341c/download/price_history_checks_jul2024.csv\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/7c0703f5-769d-4ec6-9b8a-d563b6c13d73/download/fuelcheck_pricehistory_aug2024.xlsx\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/c83f0f7e-cae0-41b4-82a2-b4a2e01e15c9/download/fuelcheck_pricehistory_sep2024.xlsx\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/e4599b20-686b-4668-bf6d-da0c2852183f/download/price_history_checks_oct2024.csv\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/44b9a701-20cb-44bd-a47a-85877070c5ab/download/fuelcheck_pricehistory_nov2024.xlsx\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/6a2f97d4-fc96-4f96-aeda-1cf38532bda9/download/fuelcheck_pricehistory_dec2024.xlsx\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/133c5415-9954-44e8-8699-2c2942d35a8b/download/price_history_checks_jan2025.csv\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/c350fcce-32f2-4e13-b569-a90a47c46ffa/download/price_history_checks_feb2025.csv\n",
-      "Downloading: https://data.nsw.gov.au/data/dataset/a97a46fc-2bdd-4b90-ac7f-0cb1e8d7ac3b/resource/215bafd0-031e-4106-9b59-694e0f222e5f/download/fuelcheck_pricehistory_mar25.xlsx\n",
-      "Combined dataset shape: (1128302, 9)\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_jan2024.xlsx\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_feb2024.xlsx\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_mar2024.xlsx\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_apr2024.xlsx\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_may2024.xlsx\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_jun2024.xlsx\n",
+      "📂 Using cached file: fuelcheck_monthly_files/price_history_checks_jul2024.csv\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_aug2024.xlsx\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_sep2024.xlsx\n",
+      "📂 Using cached file: fuelcheck_monthly_files/price_history_checks_oct2024.csv\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_nov2024.xlsx\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_dec2024.xlsx\n",
+      "📂 Using cached file: fuelcheck_monthly_files/price_history_checks_jan2025.csv\n",
+      "📂 Using cached file: fuelcheck_monthly_files/price_history_checks_feb2025.csv\n",
+      "📂 Using cached file: fuelcheck_monthly_files/fuelcheck_pricehistory_mar25.xlsx\n",
+      "✅ Combined dataset shape: (1128302, 9)\n",
       "Raw Data                              ServiceStationName  \\\n",
       "0        Costco Canberra Airport (Members Only)   \n",
       "1        Costco Canberra Airport (Members Only)   \n",
@@ -733,8 +745,8 @@
       "Converting 'PriceUpdatedDate' to datetime\n",
       "Nulls in 'PriceUpdatedDate' after conversion: 0\n",
       "Dropping rows with missing values in required fields: ['ServiceStationName', 'PriceUpdatedDate', 'Price']\n",
-      "Dropped 0 rows. Final dataset shape: (1128287, 9)\n",
-      "Shape (rows, columns): (1128287, 9)\n",
+      "Dropped 0 rows. Final dataset shape: (1128287, 11)\n",
+      "Shape (rows, columns): (1128287, 11)\n",
       "\n",
       "Remaining nulls per column:\n",
       "ServiceStationName    0\n",
@@ -746,6 +758,8 @@
       "PriceUpdatedDate      0\n",
       "Price                 0\n",
       "source_file           0\n",
+      "Date                  0\n",
+      "Time                  0\n",
       "dtype: int64\n",
       "\n",
       "Column data types:\n",
@@ -758,6 +772,8 @@
       "PriceUpdatedDate      datetime64[ns]\n",
       "Price                        float64\n",
       "source_file                   object\n",
+      "Date                          object\n",
+      "Time                          object\n",
       "dtype: object\n",
       "\n",
       "Price column summary:\n",
@@ -817,6 +833,8 @@
        "      <th>PriceUpdatedDate</th>\n",
        "      <th>Price</th>\n",
        "      <th>source_file</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -831,6 +849,8 @@
        "      <td>2024-12-01 00:00:00</td>\n",
        "      <td>206.9</td>\n",
        "      <td>https://data.nsw.gov.au/data/dataset/a97a46fc-...</td>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1027559</th>\n",
@@ -843,6 +863,8 @@
        "      <td>2025-02-10 13:53:30</td>\n",
        "      <td>189.9</td>\n",
        "      <td>https://data.nsw.gov.au/data/dataset/a97a46fc-...</td>\n",
+       "      <td>2025-02-10</td>\n",
+       "      <td>13:53:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1002455</th>\n",
@@ -855,6 +877,8 @@
        "      <td>2025-02-03 13:06:58</td>\n",
        "      <td>189.9</td>\n",
        "      <td>https://data.nsw.gov.au/data/dataset/a97a46fc-...</td>\n",
+       "      <td>2025-02-03</td>\n",
+       "      <td>13:06:58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>394745</th>\n",
@@ -867,6 +891,8 @@
        "      <td>2024-06-01 00:00:00</td>\n",
        "      <td>234.9</td>\n",
        "      <td>https://data.nsw.gov.au/data/dataset/a97a46fc-...</td>\n",
+       "      <td>2024-06-01</td>\n",
+       "      <td>00:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>628432</th>\n",
@@ -879,6 +905,8 @@
        "      <td>2024-09-01 00:00:00</td>\n",
        "      <td>195.9</td>\n",
        "      <td>https://data.nsw.gov.au/data/dataset/a97a46fc-...</td>\n",
+       "      <td>2024-09-01</td>\n",
+       "      <td>00:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -906,12 +934,19 @@
        "394745     Reddy Express      P95 2024-06-01 00:00:00  234.9   \n",
        "628432   Ultra Petroleum      U91 2024-09-01 00:00:00  195.9   \n",
        "\n",
-       "                                               source_file  \n",
-       "890685   https://data.nsw.gov.au/data/dataset/a97a46fc-...  \n",
-       "1027559  https://data.nsw.gov.au/data/dataset/a97a46fc-...  \n",
-       "1002455  https://data.nsw.gov.au/data/dataset/a97a46fc-...  \n",
-       "394745   https://data.nsw.gov.au/data/dataset/a97a46fc-...  \n",
-       "628432   https://data.nsw.gov.au/data/dataset/a97a46fc-...  "
+       "                                               source_file        Date  \\\n",
+       "890685   https://data.nsw.gov.au/data/dataset/a97a46fc-...  2024-12-01   \n",
+       "1027559  https://data.nsw.gov.au/data/dataset/a97a46fc-...  2025-02-10   \n",
+       "1002455  https://data.nsw.gov.au/data/dataset/a97a46fc-...  2025-02-03   \n",
+       "394745   https://data.nsw.gov.au/data/dataset/a97a46fc-...  2024-06-01   \n",
+       "628432   https://data.nsw.gov.au/data/dataset/a97a46fc-...  2024-09-01   \n",
+       "\n",
+       "             Time  \n",
+       "890685   00:00:00  \n",
+       "1027559  13:53:30  \n",
+       "1002455  13:06:58  \n",
+       "394745   00:00:00  \n",
+       "628432   00:00:00  "
       ]
      },
      "metadata": {},
@@ -928,6 +963,8 @@
    "source": [
     "# Main Function -\n",
     "def main():\n",
+    "    # Create directory if it doesn't exist\n",
+    "    os.makedirs(DOWNLOAD_DIR, exist_ok=True)\n",
     "    #Step 1: Retrieving the data\n",
     "    fuelcheck_raw_data = retrieve_fuelcheck_monthly_data() #Calling Retrivel Function \n",
     "    print(\"Raw Data\", fuelcheck_raw_data)\n",
@@ -954,6 +991,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "576d8df4-dfa5-44a5-8ef6-faf6ea4bc3d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6ad68dc-5a4a-4733-aaf2-15884705a448",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa4db6be-1a9a-419e-bae0-3a6740ba62bf",
    "metadata": {},
    "outputs": [],
    "source": []
